<resources>
    <string name="app_name">Student Spot</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">StudentSpot</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_forgot">forgot</string>
    <string name="forgotPassword"><u>Forgot Password?</u></string>
    <string name="Log_In">Log In</string>
    <string name="title_activity_feedback">feedback</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="id_no">Id No</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phoneno">Phone No</string>
    <string name="enterpwd">Enter Password</string>
    <string name="repwd">Re-Enter Password</string>
    <string name="answer">Answer</string>
    <string name="pastattend">Total Classes attended</string>
    <string name="pasttotal">Total Classes</string>
    <string name="futureattend">Number of Classes going to attend</string>
    <string name="futuretotal">Total Classes without including past</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="about">Enter Something About Yourself</string>
    <string name="agreement">By logging in you agree to Student Spot <b>Terms of
    service</b> and <b>Privacy Policy</b></string>

    <string-array name="security_question">
        <item>Choose a Security Question..</item>
        <item>What was your childhood nickname?</item>
        <item>In what city or town did your mother and father meet?</item>
        <item>What was your favorite food as a child?</item>
        <item>Who is your childhood sports hero?</item>
        <item>What is the name of your Pet?</item>
        <item>What is your mothers maiden name?</item>
    </string-array>
    <string name="security_heading">Choose security question</string>
    <string name="title_activity_security_question">SecurityQuestion</string>
    <string name="title_activity_launch">Siksha</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="title_activity_work_space">WorkSpace</string>
    <string name="title_activity_work">Work</string>

    <string-array name="type">
        <item>Select Account Type..</item>
        <item>Student</item>
        <item>Admin</item>
    </string-array>

    <string-array name="feeling">
        <item>Happy</item>
        <item>Sad</item>
        <item>Excited</item>
        <item>Motivated</item>
        <item>Depressed</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting1">Setting1</string>
    <string name="title_activity_dialog_edit_aboutyou">dialog_edit_aboutyou</string>


</resources>
