<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background="@drawable/shinywhite"

    android:layout_height="match_parent"
    android:fillViewport="true"
    ><RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout  android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:padding="10dp"

        android:gravity="center"
        android:orientation="vertical"
    tools:context="com.djsaiyesh.team.studenthub.Register"
        android:id="@+id/linearLayout2">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Student Spot"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:layout_column="18"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#212643" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">
        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/name"
        android:id="@+id/reg_name"
        android:textColor="#000000"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp" />

            <Spinner
                android:id="@+id/typespinner"
                android:layout_width="match_parent"
                android:entries="@array/type"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">
        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/id_no"
        android:id="@+id/reg_email"
        android:textColor="#000000"
        android:layout_below="@+id/reg_name"
        android:layout_alignParentStart="true" /></android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">
        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/phoneno"
        android:id="@+id/reg_Phone"
        android:textColor="#000000"
        android:layout_below="@+id/reg_email"
        android:layout_alignParentStart="true" /></android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">
        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enterpwd"
        android:ems="10"
        android:id="@+id/reg_pass1"
        android:textColor="#000000"
        android:layout_below="@+id/reg_Phone"
        android:layout_alignParentStart="true" /></android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">
        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/repwd"
        android:id="@+id/reg_pass2"
        android:textColor="#000000"
        android:layout_below="@+id/reg_pass1"
        android:layout_alignParentStart="true" /></android.support.design.widget.TextInputLayout>


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:id="@+id/securityspinner"
            android:entries="@array/security_question"
            android:prompt="@string/security_heading"
            android:visibility="visible"
            android:textColor="#000000"
            android:touchscreenBlocksFocus="false"
            android:popupTheme="@color/abc_background_cache_hint_selector_material_dark"
            android:layout_below="@+id/reg_pass2"
            android:layout_alignParentStart="true" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/securityans"
            android:hint="@string/answer"
            android:textColor="#000000"
            android:layout_below="@+id/reg_pass2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="43dp" /></android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:text="SIGN UP"
            android:onClick="saveInfo"
            android:id="@+id/regbutton"
    android:background="@layout/ovalshape"
            android:layout_marginTop="19dp"
            android:layout_below="@+id/securityans"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF" />
    </LinearLayout>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"

       android:gravity="center"
       android:orientation="vertical"
       tools:context="com.djsaiyesh.team.studenthub.Register"

       ></RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Already a member?"
            android:id="@+id/textView15"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_alignTop="@+id/textView16"
            android:layout_toStartOf="@+id/textView16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="LOGIN"
            android:textStyle="bold"
            android:id="@+id/textView16"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="95dp"
            android:layout_marginTop="19dp"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentEnd="true"
            android:onClick="login" />
</RelativeLayout>

</ScrollView>